--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 :root {
   --black: #000;
   --headerColor: #3c3c3c;
+  --fontWhite: #dddddd;
 }
 
 * {
@@ -11,12 +12,49 @@
 
 body {
   background-color: var(--black);
+  color: var(--fontWhite);
 }
+
+/* HEADER */
 
 .header {
   background-color: var(--headerColor);
+  display: flex;
   width: 100%;
   height: 80px;
+}
+
+.header-left {
+  /* background-color: green; */
+  display: flex;
+  align-items: center;
+  width: 50%;
+}
+.header-right {
+  /* background-color: blue; */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 50%;
+}
+
+.header-button {
+  padding: 10px;
+}
+
+.header-logo {
+  padding: 20px;
+}
+
+.main-menu-ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.main-menu-ul li {
+  padding: 20px;
 }
 
 .slidebar-left {
