--- a/day.css
+++ b/day.css
@@ -1,10 +1,15 @@
 :root {
-  --black: #000;
-  --headerColor: #ff6a6a;
-  --headerColorBright: #565656;
+  --bodyBackground: #f4f5f7;
+  --headerInputBackground: #fff;
+  --headerColor: #397095;
+  --headerColorBright: #4a92c3;
   --fontWhite: #dddddd;
-  --headerButtonBackground: rgba(255, 255, 255, 0.1);
+  --headerButtonBackground: #4a92c3;
   --navMainBorderRadius: 8px;
+  --headerSearchPlaceholderColor: black;
+  --sliderLeftBackground: #fff;
+  --slidebarLeftFontColor: #4383af;
+  --wykop-pFontColor: #fff;
 }
 
 * {
@@ -14,7 +19,7 @@
 }
 
 body {
-  background-color: var(--black);
+  background-color: var(--bodyBackground);
   color: var(--fontWhite);
   font-family: "Open Sans", sans-serif;
 }
