Added hover to slidebarLeft

--- a/day.css
+++ b/day.css
@@ -8,6 +8,7 @@
   --navMainBorderRadius: 8px;
   --headerSearchPlaceholderColor: black;
   --sliderLeftBackground: #fff;
+  --slidebarLeftBackgroundHover: #eff6f8;
   --slidebarLeftFontColor: #4383af;
   --wykop-pFontColor: #fff;
 }
