--- a/main.css
+++ b/main.css
@@ -109,7 +109,13 @@ main {
 .slidebar-left-second-ul li {
   padding: 4px 0;
 }
+
+.slidebar-left-second-ul li:hover {
+  background-color: var(--slidebarLeftBackgroundHover);
+}
+
 .icon-text {
+  color: var(--slidebarLeftFontColor);
   font-size: 12px;
 }
 
@@ -282,7 +288,7 @@ main {
   height: 100%;
   font-weight: 500;
   font-size: 14px;
-  color: #dedeff;
+  color: var(--headerSearchPlaceholderColor);
 }
 
 .input-search::placeholder {
