--- a/night.css
+++ b/night.css
@@ -8,6 +8,7 @@
   --navMainBorderRadius: 8px;
   --headerSearchPlaceholderColor: #def5ff;
   --sliderLeftBackground: #1d1d1f;
+  --slidebarLeftBackgroundHover: #2d2d2f;
   --slidebarLeftFontColor: #dddddd;
   --wykop-pFontColor: #dddddd;
 }
