--- a/main.css
+++ b/main.css
@@ -1,7 +1,34 @@
 /* MAIN */
-
 main {
   display: flex;
+}
+
+.main-content {
+  display: grid;
+  justify-content: center;
+  width: 100%;
+  grid-template-columns: 30% 30%;
+  grid-template-rows: 40px 1fr 1fr 1fr;
+  margin: 0 auto;
+}
+
+.hits-top {
+  grid-row: 2;
+  grid-column: 1/3;
+  width: 100%;
+  height: 200px;
+  background-color: grey;
+}
+
+.articles {
+  grid-column: 1;
+  grid-row: 3;
+  background-color: red;
+}
+
+.slidebar-right {
+  grid-row: 3;
+  background-color: blue;
 }
 
 /* SLIDEBAR LEFT */
