--- a/main.css
+++ b/main.css
@@ -4,30 +4,65 @@ main {
 }
 
 .main-content {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
-  grid-template-columns: 30% 30%;
-  grid-template-rows: 40px 1fr 1fr 1fr;
-  margin: 0 auto;
+  height: 100%;
+  margin: 12px;
+  background-color: purple;
 }
-
+/* HITS */
 .hits-top {
-  grid-row: 2;
-  grid-column: 1/3;
+  display: flex;
   width: 100%;
-  height: 200px;
+  justify-content: center;
+  flex-direction: column;
   background-color: grey;
 }
 
+.hits-container {
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  background-color: brown;
+}
+
+.hit-article {
+  min-width: 100px;
+  max-width: 420px;
+  background-color: rgb(132, 94, 94);
+  margin: 4px;
+}
+
+.hit-article img {
+  width: 100%;
+  height: 70%;
+  border-radius: 10px;
+}
+
+.hits-header {
+  display: flex;
+  min-width: 100%;
+  align-items: center;
+  background-color: cadetblue;
+}
+
+.hits-header h1 {
+  font-size: 14px;
+  padding: 4px;
+}
+.hits-header p {
+  font-size: 14px;
+  padding: 4px;
+}
+
 .articles {
-  grid-column: 1;
-  grid-row: 3;
   background-color: red;
 }
 
 .slidebar-right {
-  grid-row: 3;
   background-color: blue;
 }
 
@@ -36,8 +71,8 @@ main {
   display: flex;
   justify-content: center;
   background-color: var(--sliderLeftBackground);
-  margin: 4px;
-  width: 250px;
+  margin: 6px;
+  width: 300px;
   height: 100vh;
   border-radius: 6px;
 }
