--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ main {
   width: 100%;
   height: 100%;
   margin: 12px;
-  background-color: purple;
+  /* background-color: purple; */
 }
 /* HITS */
 .hits-top {
@@ -19,34 +19,63 @@ main {
   width: 100%;
   justify-content: center;
   flex-direction: column;
-  background-color: grey;
+  /* background-color: grey; */
 }
 
 .hits-container {
   display: flex;
   justify-content: center;
   max-width: 100%;
-  background-color: brown;
+  /* background-color: brown; */
 }
 
 .hit-article {
-  min-width: 100px;
+  min-width: 320px;
   max-width: 420px;
-  background-color: rgb(132, 94, 94);
+  max-height: 200px;
+  /* background-color: rgb(132, 94, 94); */
   margin: 4px;
+  position: relative;
+  overflow: hidden;
 }
 
 .hit-article img {
+  display: block;
   width: 100%;
-  height: 70%;
+  height: 100%;
   border-radius: 10px;
+}
+
+.hit-article::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40%; /* Wysokość przyciemnianego obszaru */
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  border-radius: 10px; /* Dopasowanie zaokrąglenia */
+  pointer-events: none; /* Umożliwia kliknięcie na elementy pod pseudo-elementem */
+}
+
+.hit-img-title {
+  font-size: 14px;
+  position: relative;
+  top: -30px;
+  z-index: 10;
+  padding: 0px 20px;
 }
 
 .hits-header {
   display: flex;
   min-width: 100%;
   align-items: center;
-  background-color: cadetblue;
+  margin-bottom: 10px;
+  /* background-color: cadetblue; */
 }
 
 .hits-header h1 {
