--- a/main.css
+++ b/main.css
@@ -26,6 +26,9 @@ main {
   display: flex;
   justify-content: center;
   max-width: 100%;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--sliderLeftBackground);
   /* background-color: brown; */
 }
 
@@ -85,6 +88,21 @@ main {
 .hits-header p {
   font-size: 14px;
   padding: 4px;
+}
+
+.likes-count {
+  position: relative;
+  top: -200px;
+  text-align: center;
+  padding: 6px 4px;
+  width: 48px;
+  border-radius: 10px;
+  border: 3px solid var(--fontWhite);
+  font-size: 14px;
+  font-weight: 700;
+  color: rgb(239, 112, 63);
+  background-color: var(--bodyBackground);
+  margin: 0 14px;
 }
 
 .articles {
