--- a/main.css
+++ b/main.css
@@ -16,10 +16,10 @@ main {
 /* HITS */
 .hits-top {
   display: flex;
-  width: 100%;
+  max-width: 1300px;
   justify-content: center;
   flex-direction: column;
-  /* background-color: grey; */
+  background-color: grey;
 }
 
 .hits-container {
@@ -29,15 +29,16 @@ main {
   margin-bottom: 60px;
   padding-bottom: 20px;
   border-bottom: 1px solid var(--sliderLeftBackground);
-  /* background-color: brown; */
+  background-color: brown;
 }
 
 .hit-article {
-  min-width: 320px;
-  max-width: 420px;
-  max-height: 200px;
+  /* min-width: 320px;
+  max-width: 400px;
+  max-height: 200px; */
   /* background-color: rgb(132, 94, 94); */
-  margin: 4px;
+  max-height: 200px;
+  margin: 6px;
   position: relative;
   overflow: hidden;
 }
@@ -75,10 +76,10 @@ main {
 
 .hits-header {
   display: flex;
-  min-width: 100%;
+  width: 100%;
   align-items: center;
   margin-bottom: 10px;
-  /* background-color: cadetblue; */
+  background-color: cadetblue;
 }
 
 .hits-header h1 {
