Created initial layout for articles-container section

--- a/night.css
+++ b/night.css
@@ -11,6 +11,7 @@
   --slidebarLeftBackgroundHover: #2d2d2f;
   --slidebarLeftFontColor: #dddddd;
   --wykop-pFontColor: #dddddd;
+  --articles-menu-font-color: #929292;
 }
 
 * {
