--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ main {
 
 .main-content {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -19,7 +19,7 @@ main {
   max-width: 1300px;
   justify-content: center;
   flex-direction: column;
-  background-color: grey;
+  /* background-color: grey; */
 }
 
 .hits-container {
@@ -29,7 +29,7 @@ main {
   margin-bottom: 60px;
   padding-bottom: 20px;
   border-bottom: 1px solid var(--sliderLeftBackground);
-  background-color: brown;
+  /* background-color: brown; */
 }
 
 .hit-article {
@@ -79,7 +79,7 @@ main {
   width: 100%;
   align-items: center;
   margin-bottom: 10px;
-  background-color: cadetblue;
+  /* background-color: cadetblue; */
 }
 
 .hits-header h1 {
@@ -104,14 +104,6 @@ main {
   color: rgb(239, 112, 63);
   background-color: var(--bodyBackground);
   margin: 0 14px;
-}
-
-.articles {
-  background-color: red;
-}
-
-.slidebar-right {
-  background-color: blue;
 }
 
 /* SLIDEBAR LEFT */
@@ -403,4 +395,83 @@ main {
 
 .input-search::placeholder {
   color: var(--headerSearchPlaceholderColor);
+}
+
+/* ARTICLES */
+.articles-container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1300px;
+  /* background-color: rgb(165, 101, 101); */
+}
+
+.articles-main {
+  width: 75%;
+  /* background-color: blue; */
+}
+
+.articles-container p {
+  max-width: 100%; /* Do  pasowanie do maksymalnej szerokości kontenera */
+}
+
+.slidebar-right {
+  width: 320px;
+  /* background-color: yellow; */
+}
+
+.articles-menu {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  /* background-color: black; */
+}
+
+.articles-menu h1 {
+  font-size: 14px;
+  color: var(--fontWhite);
+  margin-right: 20px;
+}
+
+.articles-menu p {
+  color: var(--articles-menu-font-color);
+  font-size: 14px;
+  margin-right: 20px;
+}
+
+.article-body {
+  width: 100%;
+  display: flex;
+  padding: 20px 0;
+  margin: 20px 0;
+  background-color: var(--sliderLeftBackground);
+  border-radius: 10px;
+  border: 1px solid var(--slidebarLeftBackgroundHover);
+}
+
+.article-body aside {
+  width: 100px;
+  flex-shrink: 0;
+  /* background-color: yellow; */
+}
+.article {
+  display: flex;
+  /* background-color: brown; */
+}
+
+.article-text {
+  max-width: 60%;
+
+  /* background-color: aquamarine; */
+}
+
+.article-photo {
+  max-width: 40%;
+
+  /* background-color: beige; */
+}
+
+.article-photo img {
+  width: 100%;
+  height: 100%;
 }
