--- a/main.css
+++ b/main.css
@@ -441,6 +441,7 @@ main {
 
 .article-body {
   width: 100%;
+  min-height: 200px;
   display: flex;
   padding: 20px 0;
   margin: 20px 0;
@@ -452,21 +453,61 @@ main {
 .article-body aside {
   width: 100px;
   flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: center;
   /* background-color: yellow; */
+}
+.article-body aside p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px 4px;
+  width: 52px;
+  height: 42px;
+  border-radius: 10px;
+  border: 3px solid var(--fontWhite);
+  font-size: 14px;
+  font-weight: 700;
+  color: rgb(239, 112, 63);
+  background-color: var(--bodyBackground);
+}
+.article-body aside button {
+  width: 55px;
+  height: 22px;
+  font-size: 10px;
+  margin-top: 4px;
+  border: 1px solid var(--fontWhite);
+  border-radius: 4px;
 }
 .article {
   display: flex;
+  width: 100%;
+  justify-content: space-between;
   /* background-color: brown; */
 }
 
 .article-text {
+  flex-grow: 1;
   max-width: 60%;
-
-  /* background-color: aquamarine; */
+  padding-right: 20px;
+  /* background-color: blue; */
+}
+.article-text header h1 {
+  font-size: 19px;
+  font-weight: 500;
+}
+.article-text p {
+  margin: 10px 0;
+  font-size: 14px;
 }
 
 .article-photo {
-  max-width: 40%;
+  flex-grow: 0;
+  max-width: 250px;
+  max-height: 160px;
+  padding: 0 10px;
 
   /* background-color: beige; */
 }
@@ -474,4 +515,26 @@ main {
 .article-photo img {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
+}
+
+.article footer {
+  display: flex;
+  min-height: 80px;
+  flex-wrap: wrap;
+}
+
+.article footer p {
+  font-size: 12px;
+  color: var(--articles-menu-font-color);
+  margin-right: 10px;
+}
+
+.article-comments-tags {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  font-size: 12px;
+  color: var(--articles-menu-font-color);
 }
