Add and style sidebar articles section

--- a/night.css
+++ b/night.css
@@ -4,6 +4,7 @@
   --headerColor: #3c3c3c;
   --headerColorBright: #565656;
   --fontWhite: #dddddd;
+  --fontOrange: rgb(239, 112, 63);
   --headerButtonBackground: rgba(255, 255, 255, 0.1);
   --navMainBorderRadius: 8px;
   --headerSearchPlaceholderColor: #def5ff;
