--- a/main.css
+++ b/main.css
@@ -406,7 +406,8 @@ main {
 }
 
 .articles-main {
-  width: 75%;
+  width: 70%;
+  margin: 0 10px;
   /* background-color: blue; */
 }
 
@@ -470,7 +471,7 @@ main {
   border: 3px solid var(--fontWhite);
   font-size: 14px;
   font-weight: 700;
-  color: rgb(239, 112, 63);
+  color: var(--fontOrange);
   background-color: var(--bodyBackground);
 }
 .article-body aside button {
@@ -537,4 +538,60 @@ main {
   width: 100%;
   font-size: 12px;
   color: var(--articles-menu-font-color);
+}
+
+/* ARTICLES RIGHT */
+
+.slidebar-right {
+  margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--slidebarLeftBackgroundHover);
+  border-radius: 8px;
+  background-color: var(--sliderLeftBackground);
+  padding: 20px;
+}
+
+.articles-right-header {
+  display: flex;
+  justify-content: space-between;
+  color: var(--articles-menu-font-color);
+  margin-bottom: 12px;
+  font-size: 14px;
+}
+
+.articles-right-header h2 {
+  font-size: 16px;
+}
+
+.article-right-body {
+  display: flex;
+  padding: 12px 0;
+}
+.article-right-image {
+  width: 82px;
+  height: 82px;
+  background-color: red;
+  flex-shrink: 0;
+}
+.article-right-image img {
+  width: 100%;
+  height: 100%;
+}
+.article-right-text {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  font-size: 14px;
+}
+.article-right-text footer {
+  display: flex;
+  width: 100%;
+  padding: 10px 0;
+  color: var(--fontOrange);
+  font-weight: 800;
+}
+.article-right-text footer img {
+  width: 20px;
+  margin-right: 6px;
 }
