--- a/night.css
+++ b/night.css
@@ -13,6 +13,7 @@
   --slidebarLeftFontColor: #dddddd;
   --wykop-pFontColor: #dddddd;
   --articles-menu-font-color: #929292;
+  --countBorder: #dddddd;
 }
 
 * {
