--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ main {
   padding: 6px 4px;
   width: 48px;
   border-radius: 10px;
-  border: 3px solid var(--fontWhite);
+  border: 3px solid var(--countBorder);
   font-size: 14px;
   font-weight: 700;
   color: rgb(239, 112, 63);
@@ -468,7 +468,7 @@ main {
   width: 52px;
   height: 42px;
   border-radius: 10px;
-  border: 3px solid var(--fontWhite);
+  border: 3px solid var(--countBorder);
   font-size: 14px;
   font-weight: 700;
   color: var(--fontOrange);
@@ -479,7 +479,7 @@ main {
   height: 22px;
   font-size: 10px;
   margin-top: 4px;
-  border: 1px solid var(--fontWhite);
+  /* border: 1px solid purple; */
   border-radius: 4px;
 }
 .article {
