--- a/main.css
+++ b/main.css
@@ -45,8 +45,8 @@ main {
 
 .hit-article img {
   display: block;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 10px;
 }
 
@@ -94,8 +94,9 @@ main {
 }
 
 .likes-count {
-  position: relative;
-  top: -200px;
+  position: absolute;
+  top: 10px; /* Adjust as needed */
+  left: 10px; /* Adjust as needed */
   text-align: center;
   padding: 6px 4px;
   width: 48px;
@@ -341,6 +342,9 @@ main {
   width: 200px;
   padding: 1px 4px;
 }
+.search-button {
+  display: none;
+}
 
 .icons {
   transition: background-color 0.25s ease, border-radius 0.25s ease;
@@ -353,6 +357,11 @@ main {
 }
 
 .icons img {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+.icon-user img {
   width: 100%;
   height: 100%;
   padding: 10px;
@@ -405,22 +414,19 @@ main {
   display: flex;
   justify-content: space-between;
   max-width: 1300px;
-  /* background-color: rgb(165, 101, 101); */
 }
 
 .articles-main {
   width: 70%;
   margin: 0 10px;
-  /* background-color: blue; */
 }
 
 .articles-container p {
-  max-width: 100%; /* Do  pasowanie do maksymalnej szerokości kontenera */
+  max-width: 100%;
 }
 
 .slidebar-right {
   width: 320px;
-  /* background-color: yellow; */
 }
 
 .articles-menu {
@@ -428,7 +434,6 @@ main {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
-  /* background-color: black; */
 }
 
 .articles-menu h1 {
@@ -461,7 +466,6 @@ main {
   flex-direction: column;
   justify-content: top;
   align-items: center;
-  /* background-color: yellow; */
 }
 .article-body aside p {
   display: flex;
@@ -491,14 +495,12 @@ main {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  /* background-color: brown; */
 }
 
 .article-text {
   flex-grow: 1;
   max-width: 60%;
   padding-right: 20px;
-  /* background-color: blue; */
 }
 .article-text header h1 {
   color: var(--articleTextHeaderFontColor);
@@ -513,16 +515,16 @@ main {
 
 .article-photo {
   flex-grow: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   max-width: 250px;
   max-height: 160px;
   padding: 0 10px;
-
-  /* background-color: beige; */
 }
 
 .article-photo img {
   width: 100%;
-  height: 100%;
   border-radius: 10px;
 }
 
@@ -583,7 +585,6 @@ main {
 .article-right-image {
   width: 82px;
   height: 82px;
-  background-color: red;
   flex-shrink: 0;
 }
 .article-right-image img {
