--- a/main.css
+++ b/main.css
@@ -459,13 +459,16 @@ main {
   border: 1px solid var(--articleBodyBorderColor);
 }
 
-.article-body aside {
+.article-left-aside {
   width: 100px;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
   justify-content: top;
   align-items: center;
+}
+.article-bottom-aside {
+  display: none;
 }
 .article-body aside p {
   display: flex;
