Style: Improve styling for commentary-section

--- a/night.css
+++ b/night.css
@@ -4,7 +4,7 @@
   --headerColor: #3c3c3c;
   --headerColorBright: #565656;
   --fontWhite: #dddddd;
-  --fontOrange: rgb(239, 112, 63);
+  --fontOrange: #ef703f;
   --headerButtonBackground: #ffffff1a;
   --navMainBorderRadius: 8px;
   --headerSearchPlaceholderColor: #def5ff;
