--- a/main.css
+++ b/main.css
@@ -626,11 +626,14 @@ main {
   background-color: var(--sliderLeftBackground);
   border-radius: 10px;
   border: 1px solid var(--articleBodyBorderColor);
+  padding: 20px;
 }
 
 .commentary-section-left {
   width: 50%;
   display: flex;
+  flex-direction: column;
+
 }
 
 .commentary-section-right {
@@ -644,3 +647,96 @@ main {
 .commentary-header-text {
   font-size: 1rem;
 }
+
+.commentary-section-logo{
+  display: flex;
+}
+
+.user-info-container {
+  margin-left: 10px;
+}
+
+.user-info {
+  color: var(--fontOrange);
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.user-time {
+  display: block;
+  margin-top: 5px;
+  color: var(--articles-menu-font-color);
+}
+
+.commentary-section-text{
+  padding: 10px 0;
+  font-size: 0.9rem;
+}
+
+.commentary-section-right{
+  display: flex;
+  justify-content: end;
+}
+
+.article-likes {
+  font-size: 12px;
+  height: 1.5rem;
+  display: flex ;
+  width: 80px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.article-likes-count{
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: rgb(1, 179, 1);
+}
+
+.plus {
+  background-color: rgba(255, 255, 255, 0);
+  font-weight: 800;
+  font-size: 20px;
+  color: rgb(1, 179, 1);
+  height: 20px; 
+  width: 20px;  
+  border: 2px solid rgb(1, 179, 1); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer; 
+  position: relative; 
+}
+
+.plus::before {
+  content: '+';
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
+
+.minus {
+  background-color: rgba(255, 255, 255, 0);
+  font-weight: 800;
+  font-size: 20px;
+  color: rgb(255, 105, 105);
+  height: 20px; 
+  width: 20px;  
+  border: 2px solid rgb(255, 105, 105); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer; 
+  position: relative; 
+}
+
+.minus::before {
+  content: '-';
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
+
+
