feat: add modal for answering with blur effect and close button
- Added answer modal with textarea for input
- Implemented blur effect on background when modal is open
- Added close button with repositioning towards center

--- a/day.css
+++ b/day.css
@@ -4,7 +4,7 @@
   --headerColor: #397095;
   --headerColorBright: #4a92c3;
   --fontWhite: #dddddd;
-  --fontOrange: rgb(239, 112, 63);
+  --fontOrange: #ef703f;
   --headerButtonBackground: #4a92c3;
   --navMainBorderRadius: 8px;
   --headerSearchPlaceholderColor: black;
