--- a/main.css
+++ b/main.css
@@ -819,6 +819,7 @@ main {
 }
 
 .modal-content textarea {
+  margin: 10px;
   width: 100%;
   height: 100px;
   margin-bottom: 10px;
@@ -831,15 +832,15 @@ main {
 .close {
   position: absolute;
   color: var(--articesMenuPFontColor);
-  top: -20px; /* Przesunięcie przycisku nad oknem modalnym */
-  right: 0; /* Pozycjonowanie przycisku na środku */
-  transform: translateX(-50%); /* Środkowanie przycisku */
+  top: -20px;
+  right: 0; 
+  transform: translateX(-50%); 
   font-size: 24px;
   cursor: pointer;
   background: var(--headerButtonBackground); 
   
-  border-radius: 50%; /* Opcjonalne: zaokrąglenie krawędzi */
-  padding: 5px 10px; /* Opcjonalne: trochę miejsca wokół "X" */
+  border-radius: 50%; 
+  padding: 5px 10px; 
 }
 
 #submit-button{
@@ -847,4 +848,10 @@ main {
   background: var(--headerButtonBackground); 
   border: 1px solid var(--headerColorBright);
   padding: 4px;
+}
+
+#char-counter {
+  font-size: 14px;
+  color: gray;
+  margin-top: 5px;
 }
