--- a/main.css
+++ b/main.css
@@ -661,7 +661,7 @@ main {
   border-radius: 10px;
   border: 1px solid var(--articleBodyBorderColor);
   padding: 20px;
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
 
 .commentary-section-left {
