--- a/responsive.css
+++ b/responsive.css
@@ -2,7 +2,22 @@
   .slidebar-left {
     position: absolute;
     left: -1000px;
-    z-index: 1;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    background-color: var(--sliderLeftBackground);
+    margin: 6px;
+    width: 300px;
+    height: 100vh;
+    border-radius: 6px;
+    transition: left 0.4s ease;
+  }
+  .slidebar-left.show {
+    left: 0;
+  }
+
+  .slidebar-left.short{
+    display: none;
   }
 }
 
