--- a/responsive.css
+++ b/responsive.css
@@ -19,6 +19,21 @@
   .slidebar-left.short{
     display: none;
   }
+
+  .white-background.show{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    z-index: 99;
+  }
+  .white-background.show-night{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.4);
+    position: absolute;
+    z-index: 99;
+  }
 }
 
 @media (max-width: 1024px) {
