--- a/responsive.css
+++ b/responsive.css
@@ -13,6 +13,8 @@
     transition: left 0.4s ease;
   }
   .slidebar-left.show {
+    position: fixed;
+    top:0;
     left: 0;
   }
 
@@ -20,19 +22,20 @@
     display: none;
   }
 
-  .white-background.show{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    position: absolute;
-    z-index: 99;
-  }
+  .white-background.show,
   .white-background.show-night{
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
-    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6); /* dla .show */
+    position: fixed; /* Zmiana na fixed */
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     z-index: 99;
+  }
+  .white-background.show-night{
+    background-color: rgba(255, 255, 255, 0.4);
   }
 }
 
