--- a/main.css
+++ b/main.css
@@ -185,6 +185,48 @@ main {
   width: 22px;
 }
 
+/* SLIDEBAR LEFT SMALL */
+.slidebar-left-content-small {
+  padding: 6px;
+}
+.slidebar-left-small-main-ul {
+  padding: 6px;
+  border-bottom: 1px solid black;
+}
+.slidebar-left-small-main-ul li {
+  padding: 6px;
+  background-color: var(--headerColor);
+  border-radius: 8px;
+  list-style-type: none;
+}
+.slidebar-left-small-main-ul a {
+  display: flex;
+  color: var(--slidebarLeftFontColor);
+  font-size: 16px;
+}
+
+.slidebar-left-content-small a img {
+  color: white;
+  width: 22px;
+}
+
+.slidebar-left-small-second-ul {
+  padding: 6px;
+}
+
+.slidebar-left-small-second-ul li {
+  padding: 6px;
+  border-radius: 8px;
+  list-style-type: none;
+  margin-bottom: 6px;
+}
+.slidebar-left-small-second-ul a {
+  display: flex;
+  text-decoration: none;
+  color: var(--slidebarLeftFontColor);
+  font-size: 16px;
+}
+
 .wykop-p {
   color: var(--wykop-pFontColor);
 }
@@ -620,7 +662,7 @@ main {
 
 /* ARTICLE INSIDE */
 
-.article-answer-section{
+.article-answer-section {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -628,11 +670,9 @@ main {
 
 .article-answer p {
   padding: 8px;
-
 }
 
 .article-answer {
-
   font-size: 0.75rem;
   color: var(--articesMenuPFontColor);
   display: flex;
@@ -642,15 +682,13 @@ main {
   cursor: pointer;
 }
 
-.article-answer-icon{
+.article-answer-icon {
   width: 20px;
-
 }
-.article-share-icon{
+.article-share-icon {
   width: 20px;
   margin-left: -10px;
 }
-
 
 /* COMMENTARY */
 
@@ -668,7 +706,6 @@ main {
   width: 50%;
   display: flex;
   flex-direction: column;
-
 }
 
 .commentary-section-right {
@@ -684,7 +721,7 @@ main {
   font-size: 1rem;
 }
 
-.commentary-section-logo{
+.commentary-section-logo {
   display: flex;
 }
 
@@ -704,12 +741,12 @@ main {
   color: var(--articles-menu-font-color);
 }
 
-.commentary-section-text{
+.commentary-section-text {
   padding: 10px 0;
   font-size: 0.9rem;
 }
 
-.commentary-section-right{
+.commentary-section-right {
   display: flex;
   justify-content: end;
 }
@@ -730,13 +767,13 @@ main {
 .article-likes {
   font-size: 12px;
   height: 1.5rem;
-  display: flex ;
+  display: flex;
   width: 80px;
   align-items: center;
   justify-content: space-between;
 }
 
-.article-likes-count{
+.article-likes-count {
   font-size: 0.9rem;
   font-weight: 600;
   color: rgb(1, 179, 1);
@@ -747,22 +784,22 @@ main {
   font-weight: 800;
   font-size: 20px;
   color: rgb(1, 179, 1);
-  height: 20px; 
-  width: 20px;  
-  border: 2px solid rgb(1, 179, 1); 
+  height: 20px;
+  width: 20px;
+  border: 2px solid rgb(1, 179, 1);
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer; 
-  position: relative; 
+  cursor: pointer;
+  position: relative;
 }
 
 .plus::before {
-  content: '+';
+  content: "+";
   position: absolute;
   top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
 }
 
 .minus {
@@ -770,28 +807,27 @@ main {
   font-weight: 800;
   font-size: 20px;
   color: rgb(255, 105, 105);
-  height: 20px; 
-  width: 20px;  
-  border: 2px solid rgb(255, 105, 105); 
+  height: 20px;
+  width: 20px;
+  border: 2px solid rgb(255, 105, 105);
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer; 
-  position: relative; 
+  cursor: pointer;
+  position: relative;
 }
 
 .minus::before {
-  content: '-';
+  content: "-";
   position: absolute;
   top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
 }
 
-.like-button{
-  cursor: pointer; 
+.like-button {
+  cursor: pointer;
 }
-
 
 /* ANSWER */
 
@@ -809,7 +845,7 @@ main {
 }
 
 .modal-content {
-  background: var(--headerButtonBackground); 
+  background: var(--headerButtonBackground);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -823,7 +859,7 @@ main {
   width: 100%;
   height: 100px;
   margin-bottom: 10px;
-  background: var(--headerButtonBackground); 
+  background: var(--headerButtonBackground);
   border: 1px solid var(--headerColorBright);
   color: var(--articleTextFontColor);
   padding: 4px;
@@ -833,19 +869,19 @@ main {
   position: absolute;
   color: var(--articesMenuPFontColor);
   top: -20px;
-  right: 0; 
-  transform: translateX(-50%); 
+  right: 0;
+  transform: translateX(-50%);
   font-size: 24px;
   cursor: pointer;
-  background: var(--headerButtonBackground); 
-  
-  border-radius: 50%; 
-  padding: 5px 10px; 
+  background: var(--headerButtonBackground);
+
+  border-radius: 50%;
+  padding: 5px 10px;
 }
 
-#submit-button{
+#submit-button {
   color: var(--articesMenuPFontColor);
-  background: var(--headerButtonBackground); 
+  background: var(--headerButtonBackground);
   border: 1px solid var(--headerColorBright);
   padding: 4px;
 }
