--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ main {
   width: 100%;
   height: 100%;
   margin: 12px;
+  margin-top: 60px;
   /* background-color: purple; */
 }
 /* HITS */
@@ -123,6 +124,7 @@ main {
   width: 300px;
   height: 100vh;
   border-radius: 6px;
+  margin-top: 60px;
 }
 
 .slidebar-left.short {
