--- a/responsive.css
+++ b/responsive.css
@@ -11,10 +11,11 @@
     height: 100vh;
     border-radius: 6px;
     transition: left 0.4s ease;
+    margin-top: 60px;
   }
   .slidebar-left.show {
     position: fixed;
-    top: 50px;
+
     left: 0;
   }
 
