--- a/night.css
+++ b/night.css
@@ -30,6 +30,8 @@
   --hitsContainerBottomColor: #2d2d2f;
   --articleBodyBorderColor: #2d2d2f;
   --articleBodyAsideBackgroundColor: #000;
+  --modalBackground: #ffffff2d;
+  --modalTextAreaBackground: #585858;
 
   --navMainBorderRadius: 8px;
   --black: #000;
