--- a/main.css
+++ b/main.css
@@ -562,6 +562,10 @@ main {
   color: var(--articleTextFontColor);
 }
 
+.article-text a {
+  text-decoration: none;
+}
+
 .article-photo {
   flex-grow: 0;
   display: flex;
@@ -854,7 +858,7 @@ main {
 }
 
 .modal-content {
-  background: var(--headerButtonBackground);
+  background: var(--modalBackground);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -868,30 +872,33 @@ main {
   width: 100%;
   height: 100px;
   margin-bottom: 10px;
-  background: var(--headerButtonBackground);
-  border: 1px solid var(--headerColorBright);
+  background: var(--modalTextAreaBackground);
+  border: 1px solid var(--modalTextAreaBackground);
   color: var(--articleTextFontColor);
   padding: 4px;
 }
 
+.modal-content textarea:focus {
+  outline: none;
+}
+
 .close {
   position: absolute;
-  color: var(--articesMenuPFontColor);
+  color: var(--modalTextColor);
   top: -20px;
   right: 0;
   transform: translateX(-50%);
   font-size: 24px;
   cursor: pointer;
-  background: var(--headerButtonBackground);
-
+  background: var(--modalBackground);
   border-radius: 50%;
   padding: 5px 10px;
 }
 
 #submit-button {
-  color: var(--articesMenuPFontColor);
-  background: var(--headerButtonBackground);
-  border: 1px solid var(--headerColorBright);
+  color: var(--modalTextColor);
+  background: var(--modalBackground);
+  border: 1px solid var(--modalBackground);
   padding: 4px;
 }
 
