Removed text-decoration for right articles

--- a/main.css
+++ b/main.css
@@ -716,6 +716,10 @@ main {
   color: var(--fontWhite);
 }
 
+.article-right-text a {
+  text-decoration: none;
+}
+
 /* COMMENTARY */
 
 .commentary-section {
