--- a/responsive.css
+++ b/responsive.css
@@ -44,6 +44,7 @@
   .articles-main {
     width: 100%;
   }
+
   .slidebar-right {
     display: none;
   }
@@ -89,6 +90,15 @@
   }
 
   @media (max-width: 640px) {
+    .hit-article img {
+      display: block;
+      max-width: 100%;
+      height: 100%;
+      border-radius: 10px;
+    }
+    .hit-img-title {
+      top: -40px;
+    }
     .article-body {
       display: flex;
       flex-wrap: wrap-reverse;
